# watcher

./: .gitignore  Makefile.am  configure.ac  requirements.txt  watcher-dummy.in  watcher-nyaa  watcher-xml  watcher.in
lib/: downloader.py  pickling.py  torrent_parser.py  xml_parser.py
m4/: ax_config_test_sh.m4
tests/: .gitignore  Makefile.am  err_errors_from_target_are_printed.sh.in  err_target_missing.in  err_target_missing.sh.in  err_unknown_arg.in  err_unknown_arg.sh.in  err_unknown_watcher.in  err_unknown_watcher.sh.in  init_test  test_change_output.in  test_change_output.sh.in  test_help.in  test_help.sh.in  test_id_is_checked.sh.in  test_id_is_respected.sh.in  test_no_change_no_output.in  test_no_change_no_output.sh.in  test_nyaa.sh.in  test_version.in  test_version.sh.in
