AC_PREREQ([2.69])

AC_INIT([watcher], [0.0.1], [wolf@wolfsden.cz])

AC_CONFIG_SRCDIR([watcher.in])
AC_CONFIG_SRCDIR([watcher-dummy.in])

AC_CONFIG_AUX_DIR([build-aux])

AM_INIT_AUTOMAKE([
	-Wall
	-Werror
	color-tests
	dist-xz
	foreign
	no-dist-gzip
	parallel-tests
	subdir-objects
	tar-ustar
])

AC_CONFIG_FILES([Makefile])
AC_CONFIG_FILES([tests/Makefile])

AC_OUTPUT

# vim: noet ts=8 sts=8 sw=8:
